# Jpeg32

./: .gitignore  AGENTS.md  CMakeLists.txt  Design.md  Plan.md  README.md
cmake/: Jpeg32Config.cmake.in  arm-none-eabi.cmake
include/: jpeg_block_copy.h  jpeg_color.h  jpeg_config.h  jpeg_dct.h  jpeg_encoder.h  jpeg_header.h  jpeg_huffman.h  jpeg_quantize.h  jpeg_tables.h
src/: jpeg_block_copy.c  jpeg_color.c  jpeg_dct.c  jpeg_encoder.c  jpeg_header.c  jpeg_huffman.c  jpeg_quantize.c  jpeg_tables.c
